# DBCourse

./: README.md  pyproject.toml
src/: DBManager.py  config.py  data_base_control.py  employers_data.json  get_request.py  main.py  vacancy_data.json
